--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -45,3 +45,7 @@ const { title, description, image = "/blog-placeholder-1.avif" } = Astro.props;
 <script>
   import "preline/dist/preline.js";
 </script>
+
+<!-- Google AdSense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3857753364740983"
+crossorigin="anonymous"></script>
