--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -38,7 +38,7 @@ const { Content } = await post.render();
         <div class="prose-a:no-underline">
           {
             post.data.tags.map((tag) => (
-              <span class="mb-2 mr-2 inline-block rounded-full bg-neutral-200 px-3 py-1 text-sm hover:bg-neutral-500 dark:bg-neutral-600">
+              <span class="mb-2 mr-2 inline-block rounded-full px-3 py-1 text-sm text-white bg-slate-700 hover:bg-slate-600">
                 <a href={`/tags/${tag}/1/`}>{tag}</a>
               </span>
             ))
