--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ const today = new Date();
             FooterLinks.map((link) => (
               <Link
                 href={link.href}
-                class="inline-flex gap-x-2 text-sm text-neutral-500 hover:text-neutral-800 dark:text-neutral-500 dark:hover:text-neutral-200"
+                class="inline-flex gap-x-2 text-lg text-neutral-500 hover:text-neutral-800 dark:text-neutral-500 dark:hover:text-neutral-200"
               >
                 {link.title}
               </Link>
@@ -29,7 +29,7 @@ const today = new Date();
           SocialLinks.map((link) => (
             <button
               type="button"
-              class="relative inline-flex h-12 w-12 items-center gap-x-2 bg-white px-4 py-3 text-neutral-500 hover:text-neutral-800 disabled:pointer-events-none disabled:opacity-50  dark:text-neutral-500 dark:hover:text-neutral-200 dark:bg-neutral-900 dark:hover:bg-neutral-900"
+              class="relative inline-flex text-xl items-center gap-x-2 bg-white px-4 py-3 text-neutral-500 hover:text-neutral-800 disabled:pointer-events-none disabled:opacity-50  dark:text-neutral-500 dark:hover:text-neutral-200 dark:bg-neutral-900 dark:hover:bg-neutral-900"
             >
               <a
                 href={link.href}
@@ -43,7 +43,7 @@ const today = new Date();
       </div>
 
       <div class="mt-2 sm:order-1 sm:mb-0">
-        <a class="flex-none text-sm text-neutral-500 hover:text-neutral-800 dark:text-neutral-500 dark:hover:text-neutral-200" href="/" aria-label="Brand"
+        <a class="flex-none text-xl text-neutral-500 hover:text-neutral-800 dark:text-neutral-500 dark:hover:text-neutral-200" href="/" aria-label="Brand"
           >{BRAND_NAME} &copy; {today.getFullYear()}</a
         >
       </div>
