--- a/src/pages/page/[page].astro
+++ b/src/pages/page/[page].astro
@@ -59,16 +59,37 @@ const { page } = Astro.props;
           ))}
         </div>
         <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
-          {page.data.slice(3).map((post) => (
-            <PostCard post={post} />
-          ))}
+          {page.data.slice(3).map((post, i) => {
+            if (i % 3 === 0) {
+              return <>
+                <ins class="adsbygoogle"
+                  style="display:block"
+                  data-ad-format="fluid"
+                  data-ad-layout-key="-6t+ed+2i-1n-4w"
+                  data-ad-client="ca-pub-3857753364740983"
+                  data-ad-slot="2091036471">
+                </ins>
+                <PostCard post={post} />
+              </>
+            }
+            return <PostCard post={post} />
+          })}
         </div>
       </>
     ) : (
       <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
-        {page.data.map((post) => (
+        {page.data.map((post, i) => {
+          if ((i + 2) % 3 === 0) {
+            <ins class="adsbygoogle"
+              style="display:block"
+              data-ad-format="fluid"
+              data-ad-layout-key="-6t+ed+2i-1n-4w"
+              data-ad-client="ca-pub-3857753364740983"
+              data-ad-slot="2091036471">
+            </ins>
+          }
           <PostCard post={post} />
-        ))}
+        })}
       </div>
     )
   }
