--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -52,6 +52,11 @@ const { Content } = await post.render();
           >
         </div>
         <Share client:visible src={Astro.url} title={post.data.title} />
+        <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-format="autorelaxed"
+          data-ad-client="ca-pub-3857753364740983"
+          data-ad-slot="3205804455"></ins>
     </article>
     <div class="mt-4">
       <RelatedPostsCard
