push to adsbygoogle

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -47,9 +47,9 @@ const { title, description, image = "/blog-placeholder-1.avif" } = Astro.props;
 </script>
 
 <!-- Google AdSense -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3857753364740983"
+<script is:inline async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3857753364740983"
 crossorigin="anonymous"></script>
 
 <!-- Cloudflare Web Analytics -->
-<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "51ab9a7651e143b58beb7402e6a38d5a"}'></script>
+<script is:inline defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "51ab9a7651e143b58beb7402e6a38d5a"}'></script>
 <!-- End Cloudflare Web Analytics -->
