--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,6 +41,9 @@ const basePath = "/page/";
               data-ad-client="ca-pub-3857753364740983"
               data-ad-slot="2091036471">
             </ins>
+            <script is:inline>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
             <Card post={post} />
           </>
         }
