--- a/src/pages/page/[page].astro
+++ b/src/pages/page/[page].astro
@@ -69,6 +69,9 @@ const { page } = Astro.props;
                   data-ad-client="ca-pub-3857753364740983"
                   data-ad-slot="2091036471">
                 </ins>
+                <script is:inline>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
                 <PostCard post={post} />
               </>
             }
