--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -57,6 +57,9 @@ const { Content } = await post.render();
           data-ad-format="autorelaxed"
           data-ad-client="ca-pub-3857753364740983"
           data-ad-slot="3205804455"></ins>
+          <script is:inline>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
     </article>
     <div class="mt-4">
       <RelatedPostsCard
