--- a/src/pages/category/[category]/[page].astro
+++ b/src/pages/category/[category]/[page].astro
@@ -53,6 +53,9 @@ const { title, description } = getCategoryMetadata(params.category);
             data-ad-client="ca-pub-3857753364740983"
             data-ad-slot="2091036471">
           </ins>
+          <script is:inline>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
           <PostCard post={post} />
         </>
       }
