--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -50,6 +50,14 @@ const { title, description, image = "/blog-placeholder-1.avif" } = Astro.props;
 <script is:inline async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3857753364740983"
 crossorigin="anonymous"></script>
 
-<!-- Cloudflare Web Analytics -->
-<script is:inline defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "51ab9a7651e143b58beb7402e6a38d5a"}'></script>
-<!-- End Cloudflare Web Analytics -->
+
+<!-- Google tag (gtag.js) -->
+<script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-DB7G8H3V1H"></script>
+<script is:inline>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DB7G8H3V1H');
+</script>
+
