--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -45,9 +45,7 @@ const { Content } = await post.render();
         </div>
         <div class="flex justify-between">
           <small
-            >Publish on <FormattedDate date={post.data.pubDate} />，Update on <FormattedDate
-              date={new Date().toISOString()}
-            /></small
+            >Publish on <FormattedDate date={post.data.pubDate} /></small
           >
         </div>
         <Share client:visible src={Astro.url} title={post.data.title} />
