--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const basePath = "/page/";
               data-ad-client="ca-pub-3857753364740983"
               data-ad-slot="2091036471">
             </ins>
-            <script is:inline>
+            <script is:inline type="text/partytown">
               (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
             <Card post={post} />
