--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -79,7 +79,7 @@ const { Content, headings } = await post.render();
       data-ad-format="autorelaxed"
       data-ad-client="ca-pub-3857753364740983"
       data-ad-slot="3205804455"></ins>
-    <script is:inline type="text/partytown">
+    <script is:inline>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
   </main>
