--- a/src/components/Product.astro
+++ b/src/components/Product.astro
@@ -1,12 +1,7 @@
----
-import AdIcon from "@components/icons/AdIcon.vue";
-import UpIcon from "@components/icons/UpIcon.vue";
----
-
 <div class="mb-5 rounded-lg border-4 border-slate-700 not-prose text-2xl">
-    <AdIcon />
+    <span class="iconify tabler--ad"></span>
     <slot />
     <p class="text-center">
-        <UpIcon class="inline" />&nbsp;商品を購入する
+        <span class="iconify icon-park-solid--up-c" ></span>&nbsp;商品を購入する
     </p>
 </div>
