--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,5 @@
 ---
-import Link from "@components/Links.astro";
-import { Icon } from "astro-icon/components";
-import { SITE_TITLE, HeaderLinks } from "@consts";
+import { SITE_TITLE } from "@consts";
 ---
 
 <header class="flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full py-7">
@@ -14,20 +12,20 @@ import { SITE_TITLE, HeaderLinks } from "@consts";
 
     <div class="flex items-center gap-x-2 ms-auto py-1 md:ps-6 md:order-3 md:col-span-3">
       <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-xl border border-transparent text-black hover:bg-neutral-100 dark:text-white dark:hover:bg-neutral-700 transition disabled:opacity-50 disabled:pointer-events-none" onclick="window.location.href='/search/'" aria-label="検索">
-        <Icon name="tabler:search" class="icon-base" />
+        <span class="icon-base iconify tabler--search"></span>
       </button>
 
       <button type="button" class="hs-dark-mode hs-dark-mode-active:hidden inline-flex items-center gap-x-2 py-2 px-3 rounded-full text-sm text-black hover:bg-white/20" data-hs-theme-click-value="dark" aria-label="ライトモードにする">
-        <Icon name="tabler:sun-filled" class="icon-base" />
+        <span class="icon-base iconify tabler--sun-filled"></span>
       </button>
       <button type="button" class="hs-dark-mode hs-dark-mode-active:inline-flex hidden items-center gap-x-2 py-2 px-3 rounded-full text-sm text-white hover:bg-white/20" data-hs-theme-click-value="light" aria-label="ダークモードにする">
-        <Icon name="tabler:moon-filled" class="icon-base" />
+        <span class="icon-base iconify tabler--moon-filled"></span>
       </button>
 
       <div class="md:hidden">
         <button type="button" class="hs-collapse-toggle size-[38px] flex justify-center items-center text-sm font-semibold rounded-xl text-black hover:bg-neutral-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-neutral-700" data-hs-collapse="#navbar-collapse-with-animation" aria-controls="navbar-collapse-with-animation" aria-label="Toggle navigation">
-          <Icon name="tabler:menu-2" class="hs-collapse-open:hidden flex-shrink-0 size-4"></Icon>
-          <Icon name="tabler:menu-order" class="hs-collapse-open:block hidden flex-shrink-0 size-4"></Icon>
+          <span class="iconify tabler--menu-2 hs-collapse-open:hidden flex-shrink-0 size-4"></span>
+          <span class="iconify tabler--menu-order "></span>
         </button>
       </div>
       
