--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,6 +1,4 @@
 ---
-import { Icon } from "astro-icon/components";
-
 export interface Props {
   currentPage: number;
   lastPage: number;
@@ -46,7 +44,7 @@ const computedBasePath = basePath ? ensureTrailingSlash(basePath) : "/page/";
         aria-label="Previous page"
         class="inline-flex min-h-[38px] min-w-[38px] items-center justify-center gap-x-1.5 rounded-lg px-2.5 py-2 text-sm text-neutral-800 hover:bg-neutral-100 focus:bg-neutral-100 focus:outline-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10"
       >
-        <Icon name="tabler:chevron-left" class="icon-base" />
+        <span class="iconify tabler--chevron-left icon-base"></span>
       </a>
     ) : (
       ""
@@ -79,7 +77,7 @@ const computedBasePath = basePath ? ensureTrailingSlash(basePath) : "/page/";
         aria-label="Next page"
         class="inline-flex min-h-[38px] min-w-[38px] items-center justify-center gap-x-1.5 rounded-lg px-2.5 py-2 text-sm text-neutral-800 hover:bg-neutral-100 focus:bg-neutral-100 focus:outline-none dark:text-white dark:hover:bg-white/10 dark:focus:bg-white/10"
       >
-        <Icon name="tabler:chevron-right" class="icon-base" />
+        <span class="iconify tabler--chevron-right icon-base"></span>
       </a>
     ) : (
       ""
