--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,5 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
-import { Icon } from "astro-icon/components";
 
 const title = `Error 404`;
 const description = `Error 404`;
@@ -14,7 +13,7 @@ const description = `Error 404`;
       <p class="text-gray-600 dark:text-neutral-400">Sorry, we couldn't find your page.</p>
       <div class="mt-5 flex flex-col justify-center items-center gap-2 sm:flex-row sm:gap-3">
         <a class="w-full sm:w-auto py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-neutral-400 text-white hover:bg-neutral-600 disabled:opacity-50 disabled:pointer-events-none" href="/">
-          <Icon name="tabler:chevron-left" class="icon-base" />
+          <span class="iconify tabler--chevron-left icon-base"></span>
           Back to homepage
         </a>
       </div>
