--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -4,7 +4,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import RelatedPostsCard from "@components/RelatedPostsCard.astro";
 import FormattedDate from "@components/FormattedDate.astro";
 import { Picture } from "astro:assets";
-import Share from "@components/Share.vue";
+import Share from "@components/Share.svelte";
 
 export async function getStaticPaths() {
   const posts = await getCollection("posts");
@@ -73,7 +73,7 @@ const { Content, headings } = await post.render();
             >Publish on <FormattedDate date={post.data.pubDate} /></small
           >
         </div>
-        <Share client:visible src={Astro.url} title={post.data.title} />
+        <Share src={Astro.url} title={post.data.title} />
     </article>
     <div class="mt-4">
       <RelatedPostsCard
