--- a/src/components/HeroCard.astro
+++ b/src/components/HeroCard.astro
@@ -36,7 +36,7 @@ const truncatedDescription = truncateUTF8String(post.data.description, 150);
 >
   <a href={`/posts/${post.slug}/`} class="block md:flex md:flex-1">
     <div class="md:w-2/3">
-      <Image src={post.data.cover ?? placeholder} alt={post.data.coverAlt ?? ""} />
+      <Image src={post.data.cover ?? placeholder} alt={post.data.coverAlt ?? ""} loading="eager" fetchpriority="high" />
     </div>
     <div
       class="absolute bottom-0 end-0 start-0 bg-gradient-to-t from-black p-4 md:relative md:flex md:w-1/3 md:flex-col md:justify-start md:bg-transparent md:p-5"
