--- a/src/components/HeroCard.astro
+++ b/src/components/HeroCard.astro
@@ -1,8 +1,7 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import FormattedDate from "@components/FormattedDate.astro";
-import placeholder from "../content/images/placeholder.png"
-import { Image } from "astro:assets";
+import MyPicture from "./MyPicture.astro";
 
 interface Props {
   post: CollectionEntry<"posts">;
@@ -36,7 +35,7 @@ const truncatedDescription = truncateUTF8String(post.data.description, 150);
 >
   <a href={`/posts/${post.slug}/`} class="block md:flex md:flex-1">
     <div class="md:w-2/3">
-      <Image src={post.data.cover ?? placeholder} alt={post.data.coverAlt ?? ""} loading="eager" fetchpriority="high" />
+      <MyPicture src={post.data.cover} alt={post.data.coverAlt} loading="eager" fetchpriority="high" />
     </div>
     <div
       class="absolute bottom-0 end-0 start-0 bg-gradient-to-t from-black p-4 md:relative md:flex md:w-1/3 md:flex-col md:justify-start md:bg-transparent md:p-5"
