--- a/src/components/Product.astro
+++ b/src/components/Product.astro
@@ -20,7 +20,7 @@ const{ manufacture, name, image, urls } = Astro.props;
 
 <div class="mb-5 rounded-lg border-4 border-slate-700 not-prose text-2xl">
     <span class="iconify tabler--ad"></span>
-    <div class="px-4 py-2">
+    <div class="p-4">
         <h3 class="text-lg">{manufacture}</h3>
         <h2 class="text-xl">{name}</h2>
         {(() => {
@@ -37,9 +37,9 @@ const{ manufacture, name, image, urls } = Astro.props;
         <div class="text-center">
             {
                 urls.map((url) =>
-                    <div class="pt-4">
+                    <div class="mt-4">
                         <a href={url.url} rel="noopener noreferrer" target="_blank">
-                            <Button>
+                            <Button class="mb-0">
                                 <span class="iconify icon-park-solid--right-c align-text-bottom" ></span><IconText>&nbsp;{url.name}</IconText>
                             </Button>
                         </a>
