--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -15,7 +15,10 @@ const { title, description, image = "/blog-placeholder-1.avif" } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="96x96" />
+<link rel="icon" type="image/png" href="/favicon.png" sizes="96x96" />
+<link rel="icon" type="image/jpg" href="/favicon.jpg" sizes="96x96" />
+<link rel="apple-touch-icon" href="/favicon.png" sizes="96x96">
 <meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
