--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,7 +7,7 @@ import "@/style.css"
 export interface Props {
   title: string;
   description: string;
-  image: string;
+  image?: string;
 }
 
 const { title, description, image } = Astro.props;
