--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,5 @@
 ---
-import { ViewTransitions } from 'astro:transitions';
+import { ViewTransitions } from "astro:transitions";
 import placeholder from "@/content/images/placeholder.png";
 import { SITE_TITLE } from "@/consts";
 
@@ -12,7 +12,8 @@ interface Props {
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 const { title, description, image = placeholder.src } = Astro.props;
-const pageTitle = Astro.url.pathname !== '/' ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
+const pageTitle =
+  Astro.url.pathname !== "/" ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
 ---
 
 <!-- Global Metadata -->
@@ -21,7 +22,7 @@ const pageTitle = Astro.url.pathname !== '/' ? `${title} | ${SITE_TITLE}` : SITE
 <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="96x96" />
 <link rel="icon" type="image/png" href="/favicon.png" sizes="96x96" />
 <link rel="icon" type="image/jpg" href="/favicon.jpg" sizes="96x96" />
-<link rel="apple-touch-icon" href="/favicon.png" sizes="96x96">
+<link rel="apple-touch-icon" href="/favicon.png" sizes="96x96" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
@@ -60,21 +61,30 @@ const pageTitle = Astro.url.pathname !== '/' ? `${title} | ${SITE_TITLE}` : SITE
 </script>
 
 <!-- Google AdSense -->
-<script is:inline async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3857753364740983" crossorigin="anonymous"></script>
+<script
+  is:inline
+  async
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3857753364740983"
+  crossorigin="anonymous"></script>
 
 <!-- Google tag (gtag.js) -->
-<script is:inline type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-DB7G8H3V1H"></script>
+<script
+  is:inline
+  type="text/partytown"
+  src="https://www.googletagmanager.com/gtag/js?id=G-DB7G8H3V1H"></script>
 
 <script is:inline type="text/partytown">
   partytown = {
     forward: ["dataLayer.push"],
-  }
+  };
 </script>
 
 <script is:inline type="text/partytown">
   window.dataLayer = window.dataLayer || [];
-  window.gtag = function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  window.gtag = function gtag() {
+    dataLayer.push(arguments);
+  };
+  gtag("js", new Date());
 
-  gtag('config', 'G-DB7G8H3V1H');
+  gtag("config", "G-DB7G8H3V1H");
 </script>
