--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,37 +2,73 @@
 import { SITE_TITLE } from "@consts";
 ---
 
-<header class="flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full py-7">
-  <nav class="relative max-w-7xl w-full flex flex-wrap md:grid md:grid-cols-12 basis-full items-center px-4 mx-auto" aria-label="Global">
+<header class="z-50 flex w-full flex-wrap py-7 md:flex-nowrap md:justify-start">
+  <nav
+    class="relative mx-auto flex w-full max-w-7xl basis-full flex-wrap items-center px-4 md:grid md:grid-cols-12"
+    aria-label="Global"
+  >
     <div class="md:col-span-3">
-      <a class="flex-none text-xl font-semibold text-neutral-900 hover:text-neutral-600 dark:text-neutral-400 dark:hover:text-neutral-200" href="/" aria-label="Astroverse">
+      <a
+        class="flex-none text-xl font-semibold text-neutral-900 hover:text-neutral-600 dark:text-neutral-400 dark:hover:text-neutral-200"
+        href="/"
+        aria-label="Astroverse"
+      >
         {SITE_TITLE}
       </a>
     </div>
 
-    <div class="flex items-center gap-x-2 ms-auto py-1 md:ps-6 md:order-3 md:col-span-3">
-      <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-xl border border-transparent text-black hover:bg-neutral-100 dark:text-white dark:hover:bg-neutral-700 transition disabled:opacity-50 disabled:pointer-events-none" onclick="window.location.href='/search/'" aria-label="検索">
+    <div
+      class="ms-auto flex items-center gap-x-2 py-1 md:order-3 md:col-span-3 md:ps-6"
+    >
+      <button
+        type="button"
+        class="inline-flex items-center gap-x-2 rounded-xl border border-transparent px-3 py-2 text-sm font-medium text-black transition hover:bg-neutral-100 disabled:pointer-events-none disabled:opacity-50 dark:text-white dark:hover:bg-neutral-700"
+        onclick="window.location.href='/search/'"
+        aria-label="検索"
+      >
         <span class="icon-base iconify tabler--search"></span>
       </button>
 
-      <button type="button" class="hs-dark-mode hs-dark-mode-active:hidden inline-flex items-center gap-x-2 py-2 px-3 rounded-full text-sm text-black hover:bg-white/20" data-hs-theme-click-value="dark" aria-label="ライトモードにする">
+      <button
+        type="button"
+        class="hs-dark-mode inline-flex items-center gap-x-2 rounded-full px-3 py-2 text-sm text-black hover:bg-white/20 hs-dark-mode-active:hidden"
+        data-hs-theme-click-value="dark"
+        aria-label="ライトモードにする"
+      >
         <span class="icon-base iconify tabler--sun-filled"></span>
       </button>
-      <button type="button" class="hs-dark-mode hs-dark-mode-active:inline-flex hidden items-center gap-x-2 py-2 px-3 rounded-full text-sm text-white hover:bg-white/20" data-hs-theme-click-value="light" aria-label="ダークモードにする">
+      <button
+        type="button"
+        class="hs-dark-mode hidden items-center gap-x-2 rounded-full px-3 py-2 text-sm text-white hover:bg-white/20 hs-dark-mode-active:inline-flex"
+        data-hs-theme-click-value="light"
+        aria-label="ダークモードにする"
+      >
         <span class="icon-base iconify tabler--moon-filled"></span>
       </button>
 
       <div class="md:hidden">
-        <button type="button" class="hs-collapse-toggle size-[38px] flex justify-center items-center text-sm font-semibold rounded-xl text-black hover:bg-neutral-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:hover:bg-neutral-700" data-hs-collapse="#navbar-collapse-with-animation" aria-controls="navbar-collapse-with-animation" aria-label="Toggle navigation">
-          <span class="iconify tabler--menu-2 hs-collapse-open:hidden flex-shrink-0 size-4"></span>
-          <span class="iconify tabler--menu-order "></span>
+        <button
+          type="button"
+          class="hs-collapse-toggle flex size-[38px] items-center justify-center rounded-xl text-sm font-semibold text-black hover:bg-neutral-100 disabled:pointer-events-none disabled:opacity-50 dark:text-white dark:hover:bg-neutral-700"
+          data-hs-collapse="#navbar-collapse-with-animation"
+          aria-controls="navbar-collapse-with-animation"
+          aria-label="Toggle navigation"
+        >
+          <span
+            class="iconify size-4 flex-shrink-0 tabler--menu-2 hs-collapse-open:hidden"
+          ></span>
+          <span class="iconify tabler--menu-order"></span>
         </button>
       </div>
-      
     </div>
 
-    <div id="navbar-collapse-with-animation" class="hs-collapse hidden overflow-hidden transition-all duration-300 basis-full grow md:block md:w-auto md:basis-auto md:order-2 md:col-span-6">
-      <div class="flex flex-col gap-y-4 gap-x-0 mt-5 md:flex-row md:justify-center md:items-center md:gap-y-0 md:gap-x-7 md:mt-0">
+    <div
+      id="navbar-collapse-with-animation"
+      class="hs-collapse hidden grow basis-full overflow-hidden transition-all duration-300 md:order-2 md:col-span-6 md:block md:w-auto md:basis-auto"
+    >
+      <div
+        class="mt-5 flex flex-col gap-x-0 gap-y-4 md:mt-0 md:flex-row md:items-center md:justify-center md:gap-x-7 md:gap-y-0"
+      >
         <!-- {
           HeaderLinks.map((link) => (
             <Link
