--- a/src/components/Product.astro
+++ b/src/components/Product.astro
@@ -1,51 +1,56 @@
 ---
-import Button from './Button.svelte';
-import IconText from './IconText.svelte';
-import MyPicture from './MyPicture.astro';
+import Button from "./Button.svelte";
+import IconText from "./IconText.svelte";
+import MyPicture from "./MyPicture.astro";
 
 export interface AffiliateLink {
-    name: string;
-    url: string;
+  name: string;
+  url: string;
 }
 
 export interface Props {
-    manufacture: string;
-    name: string;
-    image: ImageMetadata;
-    urls: AffiliateLink[];
+  manufacture: string;
+  name: string;
+  image: ImageMetadata;
+  urls: AffiliateLink[];
 }
 
-const{ manufacture, name, image, urls } = Astro.props;
+const { manufacture, name, image, urls } = Astro.props;
 ---
 
-<div class="mb-3 rounded-lg border-4 border-slate-700 not-prose text-2xl">
-    <span class="iconify tabler--ad"></span>
-    <div class="p-2">
-        <h3 class="text-lg">{manufacture}</h3>
-        <h2 class="text-xl">{name}</h2>
-        {(() => {
-            if (urls.length === 1) {
-                return (
-                    <a href={urls[0].url} rel="noopener noreferrer" target="_blank">
-                        <MyPicture src={image} alt={`${name}の商品画像`} />
-                    </a>
-                )
-            }
+<div class="not-prose mb-3 rounded-lg border-4 border-slate-700 text-2xl">
+  <span class="iconify tabler--ad"></span>
+  <div class="p-2">
+    <h3 class="text-lg">{manufacture}</h3>
+    <h2 class="text-xl">{name}</h2>
+    {
+      (() => {
+        if (urls.length === 1) {
+          return (
+            <a href={urls[0].url} rel="noopener noreferrer" target="_blank">
+              <MyPicture src={image} alt={`${name}の商品画像`} />
+            </a>
+          );
+        }
 
-            return <MyPicture src={image} alt={`${name}の商品画像`} />
-        })()}
-        <div class="text-center">
-            {
-                urls.map((url) =>
-                    <div class="mt-2">
-                        <a href={url.url} rel="noopener noreferrer" target="_blank">
-                            <Button class="mb-0">
-                                <span class="iconify icon-park-solid--right-c align-text-bottom" ></span><IconText>&nbsp;{url.name}</IconText>
-                            </Button>
-                        </a>
-                    </div>
-                )
-            }
-        </div>
+        return <MyPicture src={image} alt={`${name}の商品画像`} />;
+      })()
+    }
+    <div class="text-center">
+      {
+        urls.map((url) => (
+          <div class="mt-2">
+            <a href={url.url} rel="noopener noreferrer" target="_blank">
+              <Button class="mb-0">
+                <>
+                  <span class="iconify align-text-bottom icon-park-solid--right-c" />
+                  <IconText>&nbsp;{url.name}</IconText>
+                </>
+              </Button>
+            </a>
+          </div>
+        ))
+      }
     </div>
+  </div>
 </div>
