--- a/src/components/RelatedPostsCard.astro
+++ b/src/components/RelatedPostsCard.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 import FormattedDate from "@components/FormattedDate.astro";
-import placeholder from "../content/images/placeholder.png"
+import placeholder from "../content/images/placeholder.png";
 import { Image } from "astro:assets";
 
 const { currentCategory, currentSlug } = Astro.props;
@@ -32,7 +32,10 @@ const relatedPosts = await getRelatedArticlesByCategory();
     relatedPosts.map((post) => (
       <div class="relative mb-4 overflow-hidden rounded-xl bg-white transition-transform duration-500 hover:-translate-y-1 hover:scale-105 dark:bg-neutral-900">
         <a href={`/posts/${post.slug}/`}>
-          <Image src={post.data.cover ?? placeholder} alt={post.data.coverAlt ?? ""} />
+          <Image
+            src={post.data.cover ?? placeholder}
+            alt={post.data.coverAlt ?? ""}
+          />
           <div class="absolute bottom-0 end-0 start-0 bg-gradient-to-t p-4 md:p-5">
             <div class="mt-16 flex items-center gap-4 text-xs text-white">
               <span>{post.data.tags.join(" ")}</span>
