--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import BaseHead from "@components/BaseHead.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
-import "@/style.css"
+import "@/style.css";
 
 export interface Props {
   title: string;
@@ -19,7 +19,7 @@ const { title, description, image } = Astro.props;
     <BaseHead title={title} description={description} image={image} />
   </head>
   <body
-    class="mx-auto flex min-h-screen max-w-6xl flex-col px-4 dark:prose-invert sm:px-6 lg:px-8 dark:bg-neutral-900"
+    class="mx-auto flex min-h-screen max-w-6xl flex-col px-4 dark:prose-invert dark:bg-neutral-900 sm:px-6 lg:px-8"
   >
     <Header />
     <div class="flex-grow">
@@ -28,4 +28,3 @@ const { title, description, image } = Astro.props;
     <Footer />
   </body>
 </html>
-
