--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,25 +30,29 @@ const basePath = "/page/";
     </div>
 
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
-      {firstPagePosts.slice(3).map((post, i) =>
       {
-        if (i % 3 === 0) {
-          return <>
-            <ins class="adsbygoogle"
-              style="display:block"
-              data-ad-format="fluid"
-              data-ad-layout-key="-6t+ed+2i-1n-4w"
-              data-ad-client="ca-pub-3857753364740983"
-              data-ad-slot="2091036471">
-            </ins>
-            <script is:inline>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-            <Card post={post} />
-          </>
-        }
-        return <Card post={post} />
-      })}
+        firstPagePosts.slice(3).map((post, i) => {
+          if (i % 3 === 0) {
+            return (
+              <>
+                <ins
+                  class="adsbygoogle"
+                  style="display:block"
+                  data-ad-format="fluid"
+                  data-ad-layout-key="-6t+ed+2i-1n-4w"
+                  data-ad-client="ca-pub-3857753364740983"
+                  data-ad-slot="2091036471"
+                />
+                <script is:inline>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+                <Card post={post} />
+              </>
+            );
+          }
+          return <Card post={post} />;
+        })
+      }
     </div>
   </div>
 
