--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -1,18 +1,28 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
-import { SEARCH_PAGE_TITLE, SEARCH_PAGE_DESCRIPTION, SITE_TITLE } from "@consts";
+import {
+  SEARCH_PAGE_TITLE,
+  SEARCH_PAGE_DESCRIPTION,
+  SITE_TITLE,
+} from "@consts";
 import Pagefind from "astro-pagefind/components/Search";
 ---
 
 <BaseLayout title={SEARCH_PAGE_TITLE} description={SEARCH_PAGE_DESCRIPTION}>
   <main>
     <section class="mx-auto w-full max-w-screen-2xl px-4 md:px-6">
-      <div class="min-h-[500px] flex flex-col items-center justify-start pt-6 mt-32">
-        <a href="/" class="mb-4 flex-none text-xl font-semibold text-neutral-900 hover:text-neutral-600 dark:text-neutral-400 dark:hover:text-neutral-200">{SITE_TITLE}</a>
-        <div class="w-full max-w-[500px] h-[34px] md:w-[400px] lg:w-[500px]">
+      <div
+        class="mt-32 flex min-h-[500px] flex-col items-center justify-start pt-6"
+      >
+        <a
+          href="/"
+          class="mb-4 flex-none text-xl font-semibold text-neutral-900 hover:text-neutral-600 dark:text-neutral-400 dark:hover:text-neutral-200"
+          >{SITE_TITLE}</a
+        >
+        <div class="h-[34px] w-full max-w-[500px] md:w-[400px] lg:w-[500px]">
           <Pagefind
             id="search"
-            className="pagefind-ui w-full h-full"
+            className="pagefind-ui h-full w-full"
             uiOptions={{ showImages: false }}
           />
         </div>
@@ -20,4 +30,3 @@ import Pagefind from "astro-pagefind/components/Search";
     </section>
   </main>
 </BaseLayout>
-
