--- a/src/pages/tags/[tag]/[page].astro
+++ b/src/pages/tags/[tag]/[page].astro
@@ -43,24 +43,29 @@ const { title, description } = getTagMetadata(params.tag);
 
 <BaseLayout title={title} description={description}>
   <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
-    {page.data.map((post, i) => {
-      if ((i + 3) % 3 === 0) {
-        return <>
-          <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-format="fluid"
-            data-ad-layout-key="-6t+ed+2i-1n-4w"
-            data-ad-client="ca-pub-3857753364740983"
-            data-ad-slot="2091036471">
-          </ins>
-          <script is:inline>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
-          <PostCard post={post} />
-        </>
-      }
-      return <PostCard post={post} />
-    })}
+    {
+      page.data.map((post, i) => {
+        if ((i + 3) % 3 === 0) {
+          return (
+            <>
+              <ins
+                class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-6t+ed+2i-1n-4w"
+                data-ad-client="ca-pub-3857753364740983"
+                data-ad-slot="2091036471"
+              />
+              <script is:inline>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+              <PostCard post={post} />
+            </>
+          );
+        }
+        return <PostCard post={post} />;
+      })
+    }
   </div>
 
   <Pagination
