Fix inline script warning

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -97,6 +97,7 @@ const cover = post.data.cover ?? placeholder;
     </script>
   </main>
   <script
+    is:inline
     type="application/ld+json"
     set:html={JSON.stringify({
       "@context": "https://schema.org",
