Add missing slash

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -127,7 +127,7 @@ const cover = post.data.cover ?? placeholder;
         "@type": "ListItem",
         position: i + 1,
         name: tag,
-        item: `${new URL(`/tags/${tag}/1`, Astro.site)}`,
+        item: `${new URL(`/tags/${tag}/1/`, Astro.site)}`,
       })),
     })}
   />
