Improve alert design

--- a/src/components/Alert.astro
+++ b/src/components/Alert.astro
@@ -36,8 +36,8 @@ const iconClass = (() => {
 })();
 ---
 
-<div class=`flex rounded-lg ${bgClass}`>
-  <div class=`flex-none place-content-center px-4 text-4xl`>
+<div class=`flex rounded-lg px-2 ${bgClass}`>
+  <div class=`flex-none place-content-center mr-2 text-4xl`>
     <span class=`iconify ${iconClass}`></span>
   </div>
   <div class="flex-1">
