Use one function to generate class name

--- a/src/components/Alert.astro
+++ b/src/components/Alert.astro
@@ -7,31 +7,17 @@ interface Props {
 
 const { level } = Astro.props;
 
-const bgClass = (() => {
+const [bgClass, iconClass] = (() => {
   switch (level) {
     case "info":
     default:
-      return "bg-emerald-100";
+      return ["bg-emerald-100", "material-symbols--info"];
 
     case "warning":
-      return "bg-yellow-100";
+      return ["bg-yellow-100", "material-symbols--warning"];
 
     case "error":
-      return "bg-red-100";
-  }
-})();
-
-const iconClass = (() => {
-  switch (level) {
-    case "info":
-    default:
-      return "material-symbols--info";
-
-    case "warning":
-      return "material-symbols--warning";
-
-    case "error":
-      return "material-symbols--error";
+      return ["bg-red-100", "material-symbols--error"];
   }
 })();
 ---
