Add privacy policy post

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
-import { SITE_TITLE } from "@consts";
+import { HeaderLinks, SITE_TITLE } from "@consts";
+import Link from "@components/Links.astro"
 ---
 
 <header class="z-50 flex w-full flex-wrap py-7 md:flex-nowrap md:justify-start">
@@ -69,7 +70,7 @@ import { SITE_TITLE } from "@consts";
       <div
         class="mt-5 flex flex-col gap-x-0 gap-y-4 md:mt-0 md:flex-row md:items-center md:justify-center md:gap-x-7 md:gap-y-0"
       >
-        <!-- {
+        {
           HeaderLinks.map((link) => (
             <Link
               href={link.href}
@@ -78,7 +79,7 @@ import { SITE_TITLE } from "@consts";
               {link.title}
             </Link>
           ))
-        } -->
+        }
       </div>
     </div>
   </nav>
