Add Cookiebot script

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -53,6 +53,14 @@ const pageTitle =
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
+<script
+  is:inline
+  id="Cookiebot"
+  src="https://consent.cookiebot.com/uc.js"
+  data-cbid="eb60c4eb-4605-4a2b-a885-cc0a84305a4d"
+  data-blockingmode="auto"
+  type="text/javascript"></script>
+
 <ViewTransitions />
 
 <!-- Preline CSS -->
