--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { HeaderLinks, SITE_TITLE } from "@consts";
-import Link from "@components/Links.astro"
+import Link from "@components/Links.astro";
 ---
 
 <header class="z-50 flex w-full flex-wrap py-7 md:flex-nowrap md:justify-start">
