Place an ad under articles thumbnail

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -39,6 +39,16 @@ const cover = post.data.cover ?? placeholder;
           fetchpriority="high"
         />
       </div>
+      <ins
+        class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-3857753364740983"
+        data-ad-slot="3872798108"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+      <script is:inline>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
       {
         (() => {
           if (headings.length === 0) {
